--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.geometrycalculator">
+
+    <!-- Декларація дозволів, якщо вони потрібні -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.CalculatorGeometry"
-        tools:targetApi="31">
+        android:theme="@style/Theme.GeometryCalculator"
+        android:configChanges="orientation|screenSize">
+
+        <!-- Головна активність додатку -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.CalculatorGeometry">
+            android:theme="@style/Theme.GeometryCalculator"
+            android:exported="true">
+
+            <!-- Вказуємо, що це головна активність, і вона запускається при запуску додатку -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
-
 </manifest>
